--- a/thesis.tex
+++ b/thesis.tex
@@ -110,7 +110,7 @@ Jednotlivé body práce by se daly rozdělit na vícero dílčích podproblémů
 	\item Předzpracování zadaných adres webových stránek
 	\item Zisk čistých souborů z webových stránek
 	\item Zabezpečení stahovacího procesu
-	\item Nahrání získaného obsahu do databáze
+	\item Nahrání získaného obsahu do databáze cleansetu
 	\item Začlenění do stávající infrastruktury
 \end{itemize}
 
@@ -190,7 +190,7 @@ Z hlediska bezpečnosti by bylo rozumné spouštět virtuální stroj (neboli VM
 
 
 
-\section{Nahrání získaného obsahu do databáze}
+\section{Nahrání získaného obsahu do databáze cleansetu}
 Dalším krokem bude přesun získaného obsahu do samotné databáze cleansetu. TODO: scavenger "hdp" dřív samba python client 
 
 
