Add one sentense

--- a/thesis.tex
+++ b/thesis.tex
@@ -211,7 +211,7 @@ Dalším krokem bude přesun získaného obsahu do samotné databáze cleansetu.
 
 
 \section{Začlenění do stávající infrastruktury}
-TODO: Docker nebo Jenkins, docker by asi nemusel mit virtualbox, mohl by běžet nonstop? Jenkins jobisky
+V současné době se ve společnosti používá pro obdobné projekty systém Jenkins, proto by bylo nejlepší držet se této politiky.
 
 
 
